fix(ui): center search on mobile

--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -119,7 +119,7 @@
   border: 1.5px solid var(--gray-a4);
 
   @media screen and (max-width: 768px) {
-    width: calc(100vw - 2 * 1rem);
+    width: calc(100vw - 4 * 1rem);
     left: auto;
   }
 
